[package]
name = "my-rust-sandbox"
version = "0.1.0"
authors = ["V-0-1-D <nrg3125@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = "0.9.22"
# futures = { version = "0.3", features = ["compat"] }
# hyper = "0.12.35"
# futures = "0.3.1"